# sber_task

./: README.md
compiler/: .gitignore  CMakeLists.txt  README.md  main.cpp  tmp.cpp
compiler/include/frontend/: CMakeLists.txt  compiler.y  driver.hpp  error_hadl.hpp  lexer.hpp  lexic.l
compiler/include/inode/: inode.hpp
compiler/include/tokens/: comparator.hpp  cond_operators.hpp  conjunction.hpp  elems.hpp  io.hpp  operators.hpp  scope.hpp  symtable.hpp  utils.hpp
compiler/src/: CMakeLists.txt
compiler/src/frontend/: CMakeLists.txt
compiler/src/tokens/: CMakeLists.txt  elems.cpp  operators.cpp
compiler/tests/e2e/: e2e_tests.py
